Fixed alignment issue

--- a/packages/exmg-paper-sidemenu/styles/exmg-paper-sidemenu-styles.scss
+++ b/packages/exmg-paper-sidemenu/styles/exmg-paper-sidemenu-styles.scss
@@ -74,6 +74,7 @@ paper-item {
 
 a svg {
   fill: var(--exmg-paper-sidemenu-icon-color, rgba(0, 0, 0, var(--dark-secondary-opacity)));
+  display: block;
 }
 
 paper-item .title {
